Auto Login after Signup

--- a/instaclone/templates/layout.html
+++ b/instaclone/templates/layout.html
@@ -108,7 +108,7 @@
                   </svg>
                 </a>
                 <a class="p-2text-dark" href="#">
-                  Profile
+                  {{user}} Profile
                 </a>
               </nav>
             </div>
