default profile image

--- a/instaclone/templates/layout.html
+++ b/instaclone/templates/layout.html
@@ -108,7 +108,7 @@
                   </svg>
                 </a>
                 <a class="p-2text-dark" href="#">
-                  {{user}} Profile
+                  <img src="{% url 'pydenticon_image' user.username %}" style="width:30px; height:30px;"/>
                 </a>
               </nav>
             </div>
