--- a/instaclone/templates/_form.html
+++ b/instaclone/templates/_form.html
@@ -8,6 +8,7 @@
   {% endif %}
 
   <div class="card-body">
+    {% if form %}
     <form action="" method="POST" enctype="multipart/form-data">
       {% csrf_token %} {% bootstrap_form form %} {% buttons %}
       <button type="submit" class="btn btn-primary">
@@ -15,5 +16,10 @@
       </button>
       {% endbuttons %}
     </form>
+    {% else %}
+    <div class="alert alert-danger">
+      form 객체를 지정해주세요.
+    </div>
+    {% endif %}
   </div>
 </div>
