--- a/instaclone/templates/layout.html
+++ b/instaclone/templates/layout.html
@@ -109,6 +109,7 @@
                 </a>
                 <a class="p-2text-dark" href="{% url 'profile_edit' %}">
                   <img
+                    class="rounded-circle"
                     src="{{ user.avatar_url }}"
                     style="width: 30px; height: 30px;"
                   />
